[package]
name = "silicate"
version = "0.1.0"
edition = "2021"
authors = ["An Tran <antran@caltech.edu>"]
description = "Cross-platform GPU-accelerated Procreate file viewer.s"
readme = "README.md"
repository = "https://github.com/Avarel/procreate-rs"
license = "MIT"

[workspace]
members = [
    "libs/egui_dock"
]

[features]
default = []
psd = ["dep:psd"]

[dependencies]
# Procreate support
zip = "0.6"
minilzo-rs = "0.6.0"
plist = "1.3"
thiserror = "1.0"
regex = "1.6"
image = { version = "0.24", features = ["png", "jpeg", "tga", "tiff", "webp", "bmp"] }
once_cell = "1"
memmap2 = "0.5"
rayon = "1"
# PSD support
psd = { version = "0.3", optional = true }
# GPU rendering
wgpu = "0.13"
bytemuck = { version = "1.12", features = ["derive"] }
# Synchronization
parking_lot = "0.12"
# Display GUI
egui = "0.19"
egui-wgpu = "0.19"
egui-winit = "0.19"
winit = "0.27"
# egui_dock = "0.2"
egui_dock = { path = "libs/egui_dock" }
egui-notify = "0.4.0"
# Async runtime
rfd = { version = "0.10", default-features = false, features = ["xdg-portal"] }
tokio = { version = "1.21", features = ["sync", "rt", "rt-multi-thread", "time"] }
futures = "0.3"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.bundle]
name = "Silicate"
identifier = "io.antran.silicate"
icon = ["assets/icon.ico"]
category = "Utility"