[package]
name = "silicate"
version = "0.2.1"
edition = "2021"
authors = ["An Tran <antran@caltech.edu>"]
description = "Cross-platform GPU-accelerated Procreate file viewer.s"
readme = "README.md"
repository = "https://github.com/Avarel/procreate-rs"
license = "MIT"

[workspace]
members = [
    # "libs/egui_dock",
    "libs/lz4_flex"
]

[features]
default = []

[dependencies]
# Procreate support
zip = { version = "0.6", default-features = false, features = ["deflate"] }
lz4_flex = { path = "libs/lz4_flex" }
minilzo-rs = "0.6.0"
plist = "1.3"
thiserror = "1.0"
regex = "1.6"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "tga", "tiff", "webp", "bmp"] }
once_cell = "1"
memmap2 = "0.9"
rayon = "1"
# GPU rendering
wgpu = "0.18"
bytemuck = { version = "1.12", features = ["derive"] }
# Synchronization
parking_lot = "0.12"
# Display GUI
egui = "0.24"
egui-wgpu = "0.24"
egui-winit = { version = "0.24", default-features = false }
# winit = "0.29"
egui_dock = "0.9"
# egui_dock = { path = "libs/egui_dock" }
egui-notify = "0.11"
# Async runtime
rfd = { version = "0.12", default-features = false, features = ["xdg-portal"] }
tokio = { version = "1.21", features = ["sync", "rt", "rt-multi-thread", "time"] }
futures = "0.3"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[build-dependencies]
cc = "1.0"

[package.metadata.bundle]
name = "Silicate"
identifier = "io.antran.silicate"
icon = ["assets/icon.ico"]
category = "Utility"