[package]
name = "silicate"
version = "0.2.1"
edition = "2021"
authors = ["An Tran <antran@caltech.edu>"]
description = "Cross-platform GPU-accelerated Procreate file viewer.s"
readme = "README.md"
repository = "https://github.com/Avarel/procreate-rs"
license = "MIT"

[workspace]
members = ["libs/compositor", "libs/lz4_flex", "libs/silica"]

[features]
default = []

[dependencies]
silicate-compositor = { path = "libs/compositor" }
silica = { path = "libs/silica" }

image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "tga",
    "tiff",
    "webp",
    "bmp",
] }
# GPU rendering
wgpu = "24.0"
# Synchronization
parking_lot = "0.12"
# Display GUI
egui = "0.31"
egui-wgpu = "0.31.0"
egui-winit = "0.31.0"
# winit = "0.29"
egui_dock = "0.16"
egui-notify = "0.19"
# Async runtime
rfd = { version = "0.15", default-features = false, features = ["xdg-portal"] }
tokio = { version = "1.21", features = [
    "sync",
    "rt",
    "rt-multi-thread",
    "time",
] }
futures = "0.3"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[build-dependencies]
cc = "1.0"

[package.metadata.bundle]
name = "Silicate"
identifier = "io.antran.silicate"
icon = ["assets/icon.ico"]
category = "Utility"
